[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Monster.gd" type="Script" id=1]
[ext_resource path="res://grid_movement/Dungeon Grid/tiles/big_demon_run_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://Audio/SFX/walk 3 slow.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/SFX/Retro Roar Krushed 01.wav" type="AudioStream" id=4]
[ext_resource path="res://grid_movement/Dungeon Grid/tiles/big_demon_run_anim_f2.png" type="Texture" id=5]
[ext_resource path="res://grid_movement/Dungeon Grid/tiles/big_demon_run_anim_f3.png" type="Texture" id=6]
[ext_resource path="res://grid_movement/Dungeon Grid/tiles/big_demon_run_anim_f0.png" type="Texture" id=7]
[ext_resource path="res://Scenes/InteractionScenes/BossInteractionScene.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "bump"
length = 0.1
step = 0.01

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.25
step = 0.05

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Monster" type="Node2D"]
position = Vector2( 32, 32 )
z_index = 1
script = ExtResource( 1 )
ObjectInteractionScene = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bump = SubResource( 1 )
anims/walk = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Pivot" type="Position2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pivot"]
position = Vector2( 0, -17 )
frames = SubResource( 3 )
playing = true

[node name="MoveAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="BumpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SpawnAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="MoveCooldown" type="Timer" parent="."]
wait_time = 0.331

[node name="InitialMoveCooldown" type="Timer" parent="."]
wait_time = 1.642
one_shot = true
autostart = true

[connection signal="timeout" from="MoveCooldown" to="." method="_on_MoveCooldown_timeout"]
[connection signal="timeout" from="InitialMoveCooldown" to="." method="_on_InitialMoveCooldown_timeout"]
